Introduce kvo key-value tables

--- a/modd.conf
+++ b/modd.conf
@@ -1,5 +1,6 @@
-*.go modd.conf {
-    prep: go test -vet=all -coverprofile cover.out .
-    prep: go tool cover -html=cover.out -o=cover.html
-    prep: cloc *.go
+**/*.go go.mod modd.conf {
+    prep: go test ./...
+    # prep: go test -vet=all -coverprofile cover.out ./...
+    # prep: go tool cover -html=cover.out -o=cover.html
+    # prep: cloc *.go
 }
