Update Zed tasks

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -6,7 +6,7 @@
     "use_new_terminal": false,
     "allow_concurrent_runs": false,
     "reveal": "always",
-    "hide": "on_success",
+    "hide": "never",
     "shell": "system",
     "tags": ["go-test"]
   },
@@ -17,7 +17,7 @@
     "use_new_terminal": false,
     "allow_concurrent_runs": false,
     "reveal": "always",
-    "hide": "on_success",
+    "hide": "never",
     "shell": "system"
   },
   {
@@ -27,7 +27,7 @@
     "use_new_terminal": false,
     "allow_concurrent_runs": false,
     "reveal": "always",
-    "hide": "on_success",
+    "hide": "never",
     "shell": "system"
   }
 ]
